Make sure all categories are the same height, by making button invisible rather than not showing it

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,10 @@ hr.double {
   text-transform: uppercase;
 }
 
+.btn.btn-hidden {
+  visibility: hidden;
+}
+
 .col-xs-5ths,
 .col-sm-5ths,
 .col-md-5ths,
